# speculabench

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
speculabench/: __init__.py  decode.py  eval.py  model.py
tests/: test_speculabench.py
