[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speculabench"
version = "0.1.0"
description = "Model what speculative decoding actually buys you: acceptance rate, draft length, and real speedup, with no GPU required."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahmed Doghri" }]
keywords = ["llm", "inference", "speculative-decoding", "benchmark", "latency", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/ahmeddoghri/speculabench"

[tool.hatch.build.targets.wheel]
packages = ["speculabench"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E9", "F", "I"]
